--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noImplicitAny": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
   "include": ["src", "./setupTest.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
