--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm run test"
+      "pre-commit": "lint-staged"
     }
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.18.0"
   },
