--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
+    "msw": "^2.0.8",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
