--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "jsx": "react-jsx",
     "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
-  "include": ["src", "./setupTest.ts"],
+  "include": ["src", "setupTest.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
