--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^2.8.1",
     "@reduxjs/toolkit": "^1.9.7",
     "history": "^5.3.0",
     "react": "^18.2.0",
@@ -44,6 +44,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.7",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.1.0",
@@ -62,6 +63,7 @@
     "lint-staged": "^15.0.2",
     "msw": "^2.0.8",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.6",
