--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.8.1",
     "@reduxjs/toolkit": "^1.9.7",
     "history": "^5.3.0",
