--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.18.0"
